dnl Process this file with autoconf to produce a configure script.
AC_INIT(zfunge.c)
AM_INIT_AUTOMAKE(zfunge,0.0.2pre3+SOCK)
AM_CONFIG_HEADER(config.h)

dnl Checks for programs.
AC_PROG_CC
AC_PATH_PROG(PERL_BIN, perl, [perl])
AC_DEFINE_UNQUOTED(PERL_BIN,"$PERL_BIN",[Path to perl executable])

dnl Checks for libraries.
AC_CHECK_LIB(m,main)

dnl Checks for header files.
AC_HEADER_STDC

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_INLINE
dnl stupid glibc2/glibc1 incompatibility
AC_TRY_LINK([#include <sys/socket.h>],[
socklen_t see_if_socklen_t_exists;
],,AC_DEFINE(socklen_t, int, [Set to int if you don't have socklen_t]))

dnl Checks for library functions.
AC_CHECK_FUNCS(strstr)

CFLAGS=" -DFUNGELIBDIR=\\\"${datadir}/@PACKAGE@\\\" ${CFLAGS}"

AC_OUTPUT(Makefile test/Makefile)
